// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar should match empty div snapshot when teamId is missing 1`] = `<div />`;

exports[`components/sidebar should match snapshot 1`] = `
<ResizableLhs
  className=""
  id="SidebarContainer"
>
  <SidebarHeader
    canCreateChannel={true}
    canCreateCustomGroups={true}
    canJoinPublicChannel={true}
    handleOpenDirectMessagesModal={[Function]}
    invitePeopleModal={[Function]}
    showCreateCategoryModal={[Function]}
    showCreateUserGroupModal={[Function]}
    showMoreChannelsModal={[Function]}
    showNewChannelModal={[Function]}
    unreadFilterEnabled={false}
  />
  <div
    aria-label="channel navigator region"
    className="a11y__region"
    data-a11y-sort-order="6"
    id="lhsNavigator"
    role="application"
  >
    <Connect(ChannelNavigator) />
  </div>
  <div
    className="sidebar--left__icons"
  >
    <Pluggable
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <Connect(injectIntl(SidebarList))
    handleOpenMoreDirectChannelsModal={[Function]}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  />
  <Connect(DataPrefetch) />
</ResizableLhs>
`;

exports[`components/sidebar should match snapshot when direct channels modal is open 1`] = `
<ResizableLhs
  className=""
  id="SidebarContainer"
>
  <SidebarHeader
    canCreateChannel={true}
    canCreateCustomGroups={true}
    canJoinPublicChannel={true}
    handleOpenDirectMessagesModal={[Function]}
    invitePeopleModal={[Function]}
    showCreateCategoryModal={[Function]}
    showCreateUserGroupModal={[Function]}
    showMoreChannelsModal={[Function]}
    showNewChannelModal={[Function]}
    unreadFilterEnabled={false}
  />
  <div
    aria-label="channel navigator region"
    className="a11y__region"
    data-a11y-sort-order="6"
    id="lhsNavigator"
    role="application"
  >
    <Connect(ChannelNavigator) />
  </div>
  <div
    className="sidebar--left__icons"
  >
    <Pluggable
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <Connect(injectIntl(SidebarList))
    handleOpenMoreDirectChannelsModal={[Function]}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  />
  <Connect(DataPrefetch) />
  <MoreDirectChannels
    isExistingChannel={false}
    onModalDismissed={[Function]}
  />
</ResizableLhs>
`;

exports[`components/sidebar should match snapshot when more channels modal is open 1`] = `
<ResizableLhs
  className=""
  id="SidebarContainer"
>
  <SidebarHeader
    canCreateChannel={true}
    canCreateCustomGroups={true}
    canJoinPublicChannel={true}
    handleOpenDirectMessagesModal={[Function]}
    invitePeopleModal={[Function]}
    showCreateCategoryModal={[Function]}
    showCreateUserGroupModal={[Function]}
    showMoreChannelsModal={[Function]}
    showNewChannelModal={[Function]}
    unreadFilterEnabled={false}
  />
  <div
    aria-label="channel navigator region"
    className="a11y__region"
    data-a11y-sort-order="6"
    id="lhsNavigator"
    role="application"
  >
    <Connect(ChannelNavigator) />
  </div>
  <div
    className="sidebar--left__icons"
  >
    <Pluggable
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <Connect(injectIntl(SidebarList))
    handleOpenMoreDirectChannelsModal={[Function]}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  />
  <Connect(DataPrefetch) />
</ResizableLhs>
`;
